--- a/AJAXTests/AJAXTestSuites.csproj
+++ b/AJAXTests/AJAXTestSuites.csproj
@@ -36,7 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="AJAXReqestTests.cs" />
     <Compile Include="AJAXSubjectTests.cs" />
+    <Compile Include="DataDrivenAJAXRequestTests.cs" />
     <Compile Include="DataEntities\UserData.cs" />
     <Compile Include="DataEntities\UserResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
