--- a/AJAXTests/packages.config
+++ b/AJAXTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="json-serialize" version="1.1.2" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net461" />
+  <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnit.Engine.Api" version="3.9.0" targetFramework="net461" />
