--- a/AmazoneTests/AmazoneTest.csproj
+++ b/AmazoneTests/AmazoneTest.csproj
@@ -52,7 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Amazontests.cs" />
+    <Compile Include="Amazontest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
